--- a/app/src/main/res/layout/user_protocol.xml
+++ b/app/src/main/res/layout/user_protocol.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/protocol_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/warm_hint"
